syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUser(UserId) returns (User);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserId) returns (DeleteResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
  string updated_at = 6;
  string first_name = 7;
  string last_name = 8;
  string bio = 9;
  string website = 10;
  string deleted_at = 11;
}

message UserId {
  string user_id = 1;
}

message GetAllUsersRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message DeleteResponse{
  string message = 1;
}



message Post {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  int64 likes = 5;
  int64 dislikes = 6;
  int64 views = 7;
  string category = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
  repeated Comment comment = 12;
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  int64 likes = 5;
  int64 dislikes = 6;
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;
}
